[package]
name = "multiqueue2"
version = "0.1.7"
authors = ["Sam Schetterer <samschet@gmail.com>", "Abby Chau <i@abby.md>"]
license = "MIT"
description = "A fast mpmc broadcast queue"
repository = "https://github.com/abbychau/multiqueue2"
documentation = "https://docs.rs/multiqueue2"
readme = "Readme.md"
keywords = ["queue", "mpmc", "lockless", "broadcast", "message"]
categories = ['asynchronous', 'concurrency', 'data-structures', 'algorithms']
edition = "2018"

[dependencies]
crossbeam = "0.8.0"
futures-core = "0.3.0"
futures-sink = "0.3.0"
smallvec = "1.5.1"
parking_lot = "0.11.1"
time = "0.2.23"
atomic_utilities = "0.5.0"

# tokio = "0.1.20"
# tokio-timer = "0.2.11"

[dev-dependencies]
futures = "0.3.1"
