[package]
name = "ferring"
version = "0.0.1"
authors = ["Sam Schetterer <samschet@gmail.com>", "Abby Chau <i@abby.md>", "Erick Arce <erick.arce10@gmail.com>"]
license = "MIT"
description = "A fast mpmc broadcast queue"
repository = "https://github.com/canal-street/ferring"
documentation = "https://docs.rs/ferring"
readme = "Readme.md"
keywords = ["queue", "mpmc", "lockless", "broadcast", "message"]
categories = ['asynchronous', 'concurrency', 'data-structures', 'algorithms']
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
futures = "0.3.31"
smallvec = "1.15.1"
parking_lot = "0.12.4"
atomic_utilities = "0.5.0"
tokio = { version = "1.47.0", features = ["macros", "rt", "rt-multi-thread", "time"] }

[dev-dependencies]
time = "0.3.41"
