[package]
name = "multiqueue2"
version = "0.2.1"
authors = ["Sam Schetterer <samschet@gmail.com>", "Abby Chau <i@abby.md>"]
license = "MIT"
description = "A fast mpmc broadcast queue"
repository = "https://github.com/abbychau/multiqueue2"
documentation = "https://docs.rs/multiqueue2"
readme = "README.md"
keywords = ["queue", "mpmc", "lockless", "broadcast", "message"]
categories = ['asynchronous', 'concurrency', 'data-structures', 'algorithms']
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
futures = "0.3.31"
smallvec = "1.15.1"
parking_lot = "0.12.4"
atomic_utilities = "0.5.0"
tokio = { version = "1.47.0", features = ["macros", "rt", "rt-multi-thread", "time"] }

[dev-dependencies]
time = "0.3.41"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "multiqueue_benchmarks"
harness = false

[[bench]]
name = "quick_benchmark"
harness = false
